--- a/back/package.json
+++ b/back/package.json
@@ -10,6 +10,8 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "mysql2": "^2.3.3",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.13.0",
     "sequelize-cli": "^6.3.0",
     "socket.io": "^4.5.2"
